Finished creating type system, entities, collections and repos, starting on delivery calculation logic

--- a/delivery-calculator/.gitignore
+++ b/delivery-calculator/.gitignore
@@ -7,6 +7,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-.idea
-*.log
-.vagrant
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
