--- a/delivery-calculator/composer.json
+++ b/delivery-calculator/composer.json
@@ -9,7 +9,8 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "ramsey/uuid": "^3.8"
     },
     "config": {
         "preferred-install": {
@@ -55,5 +56,8 @@
             "allow-contrib": false,
             "require": "4.3.*"
         }
+    },
+    "require-dev": {
+        "symfony/phpunit-bridge": "^4.3"
     }
 }
