--- a/delivery-calculator/composer.json
+++ b/delivery-calculator/composer.json
@@ -5,12 +5,14 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ramsey/uuid": "^3.8",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*",
-        "ramsey/uuid": "^3.8"
+        "symfony/twig-bundle": "4.3.*",
+        "symfony/yaml": "4.3.*"
     },
     "config": {
         "preferred-install": {
